--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "start": "next start"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.9.1",
+        "@material-ui/styles": "^4.10.0",
+        "clsx": "^1.1.1",
         "dayjs": "1.8.24",
         "next": "9.3.5",
         "react": "16.13.1",
