--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "@material-ui/styles": "^4.10.0",
         "clsx": "^1.1.1",
         "dayjs": "1.8.24",
+        "framer-motion": "^2.3.0",
         "next": "9.3.5",
         "react": "16.13.1",
         "react-dom": "16.13.1",
