--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
         "@types/node": "13.11.1",
         "@types/react": "16.9.34",
         "@types/uuid": "7.0.2",
+        "@typescript-eslint/eslint-plugin": "^3.8.0",
+        "eslint": "^7.6.0",
+        "eslint-config-airbnb-typescript": "^9.0.0",
+        "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jsx-a11y": "^6.3.1",
+        "eslint-plugin-react": "^7.20.5",
+        "eslint-plugin-react-hooks": "^4.0.8",
         "typescript": "3.8.3"
     }
 }
